remove extra properties

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerAppsRevisions.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerAppsRevisions.json
@@ -517,7 +517,7 @@
               "description": "The containers collection under a replica.",
               "type": "array",
               "items": {
-                "$ref": "#/definitions/ReplicaContainer"
+                "$ref": "#/definitions/Container"
               }
             }
           },
@@ -541,35 +541,33 @@
         }
       }
     },
-    "ReplicaContainer": {
+    "Container": {
       "description": "Container object under Container App Revision Replica.",
       "type": "object",
       "properties": {
+        "description": "Container resource specific properties",
+        "type": "object",
         "properties": {
-          "description": "Container resource specific properties",
-          "type": "object",
-          "properties": {
-            "name": {
-              "description": "The Name of the Container",
-              "type": "string"
-            },
-            "containerId": {
-              "description": "The Id of the Container",
-              "type": "string"
-            },
-            "ready": {
-              "description": "The container ready status",
-              "type": "boolean"
-            },
-            "started": {
-              "description": "The container start status",
-              "type": "boolean"
-            },
-            "restartCount": {
-              "format": "int32",
-              "description": "The container restart count",
-              "type": "integer"
-            }
+          "name": {
+            "description": "The Name of the Container",
+            "type": "string"
+          },
+          "containerId": {
+            "description": "The Id of the Container",
+            "type": "string"
+          },
+          "ready": {
+            "description": "The container ready status",
+            "type": "boolean"
+          },
+          "started": {
+            "description": "The container start status",
+            "type": "boolean"
+          },
+          "restartCount": {
+            "format": "int32",
+            "description": "The container restart count",
+            "type": "integer"
           }
         }
       }
