--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerAppsRevisions.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerAppsRevisions.json
@@ -517,7 +517,7 @@
               "description": "The containers collection under a replica.",
               "type": "array",
               "items": {
-                "$ref": "#/definitions/Container"
+                "$ref": "#/definitions/ReplicaContainer"
               }
             }
           },
@@ -541,7 +541,7 @@
         }
       }
     },
-    "Container": {
+    "ReplicaContainer": {
       "description": "Container object under Container App Revision Replica.",
       "type": "object",
       "properties": {
