Examples+missing paths

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
@@ -19,7 +19,7 @@
                 "certificateName": "my-certificate-for-my-name-dot-com"
               },
               {
-                "name": "www.my--other-name.com",
+                "name": "www.my-other-name.com",
                 "bindingType": "SniEnabled",
                 "certificateName": "my-certificate-for-my-other-name-dot-com"
               }
