Updated ms-examples and swagger files after review

--- a/specification/synapse/resource-manager/Microsoft.Synapse/preview/2021-06-01-preview/examples/UpdateWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
+++ b/specification/synapse/resource-manager/Microsoft.Synapse/preview/2021-06-01-preview/examples/UpdateWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
@@ -4,22 +4,12 @@
     "resourceGroupName": "workspace-6852",
     "workspaceName": "workspace-2080",
     "dedicatedSQLminimalTlsSettingsName": "default",
-    "api-version": "2021-06-01-preview"
+    "api-version": "2021-06-01-preview",
+    "dedicatedSQLminimalTlsSettingsPatchInfo": {
+      "minimalTlsVersion": "1.1"
+    }
   },
   "responses": {
-    "200": {
-      "body": {
-        "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/workspace-6852/providers/Microsoft.Synapse/workspaces/workspace-2080/dedicatedSQLminimalTlsSettings/default",
-        "name": "default",
-        "type": "Microsoft.Synapse/workspaces/dedicatedSQLminimalTlsSettings",
-        "location": "East US",
-        "properties": {
-          "administratorLogin": "sqladminuser",
-          "fullyQualifiedDomainName": "workspace-2080.database.windows.net",
-          "state": "Ready",
-          "minimalTlsVersion": "1.2"
-        }
-      }
-    }
+    "202": {}
   }
 }
