--- a/specification/synapse/resource-manager/Microsoft.Synapse/stable/2021-06-01/examples/ListWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
+++ b/specification/synapse/resource-manager/Microsoft.Synapse/stable/2021-06-01/examples/ListWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
@@ -10,27 +10,21 @@
       "body": {
         "value": [
           {
-            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/workspace-6852/providers/Microsoft.Synapse/workspaces/workspace-2080/dedicatedSQLminimalTlsSettings",
+            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/workspace-6852/providers/Microsoft.Synapse/workspaces/workspace-2080/dedicatedSQLminimalTlsSettings/default",
             "name": "default",
             "type": "Microsoft.Synapse/workspaces/dedicatedSQLminimalTlsSettings",
-            "location": "East US",
+            "location": "eastus",
             "properties": {
-              "administratorLogin": "sqladminuser",
-              "fullyQualifiedDomainName": "workspace-2080.database.windows.net",
-              "state": "Ready",
-              "minimalTlsVersion": "1.2"
+              "minimalTlsVersion": "1.1"
             }
           },
           {
-            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/workspace-6852/providers/Microsoft.Synapse/workspaces/workspace-2080/dedicatedSQLminimalTlsSettings",
+            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/workspace-6852/providers/Microsoft.Synapse/workspaces/workspace-2080/dedicatedSQLminimalTlsSettings/default",
             "name": "default",
             "type": "Microsoft.Synapse/workspaces/dedicatedSQLminimalTlsSettings",
-            "location": "East US",
+            "location": "eastus",
             "properties": {
-              "administratorLogin": "sqladminuser",
-              "fullyQualifiedDomainName": "workspace-2080.database.windows.net",
-              "state": "Ready",
-              "minimalTlsVersion": "1.2"
+              "minimalTlsVersion": "1.1"
             }
           }
         ]
