--- a/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/Evaluation_Apply.json
+++ b/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/Evaluation_Apply.json
@@ -1,11 +1,11 @@
 {
   "parameters": {
-    "Endpoint": "{Endpoint}",
     "body": {
       "evaluationId": "b58c6d92-b727-48c1-9487-4be2782c9e0a",
       "policyName": "online"
     },
-    "Ocp-Apim-Subscription-Key": "{API key}"
+    "Ocp-Apim-Subscription-Key": "{API key}",
+    "Endpoint": "{Endpoint}"
   },
   "responses": {
     "204": {}
