--- a/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Get.json
+++ b/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Get.json
@@ -1,14 +1,13 @@
 {
   "parameters": {
-    "Ocp-Apim-Subscription-Key": "{API key}",
-    "Endpoint": "{Endpoint}"
+    "Endpoint": "{Endpoint}",
+    "Ocp-Apim-Subscription-Key": "{API key}"
   },
   "responses": {
     "200": {
-      "headers": {},
       "body": {
         "rewardWaitTime": "PT10M",
-        "defaultReward": 0.0,
+        "defaultReward": 0,
         "rewardAggregation": "earliest",
         "explorationPercentage": 0.2,
         "modelExportFrequency": "PT5M",
@@ -20,7 +19,8 @@
         "isAutoOptimizationEnabled": true,
         "autoOptimizationFrequency": "P7D",
         "autoOptimizationStartDate": "2019-01-19T00:00:00Z"
-      }
+      },
+      "headers": {}
     }
   }
 }
