--- a/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Update.json
+++ b/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Update.json
@@ -1,29 +1,27 @@
 {
   "parameters": {
-    "Endpoint": "{Endpoint}",
     "body": {
       "rewardWaitTime": "PT10M",
-      "defaultReward": 0.0,
+      "defaultReward": 0,
       "rewardAggregation": "earliest",
       "explorationPercentage": 0.2,
       "modelExportFrequency": "PT5M",
       "logMirrorEnabled": true,
       "logMirrorSasUri": "https://testblob.blob.core.windows.net/container?se=2020-08-13T00%3A00Z&sp=rwl&spr=https&sv=2018-11-09&sr=c&sig=signature",
       "logRetentionDays": 7,
-      "lastConfigurationEditDate": "2019-01-19T00:00:00Z",
       "learningMode": "Online",
       "isAutoOptimizationEnabled": true,
       "autoOptimizationFrequency": "P7D",
       "autoOptimizationStartDate": "2019-01-19T00:00:00Z"
     },
-    "Ocp-Apim-Subscription-Key": "{API key}"
+    "Ocp-Apim-Subscription-Key": "{API key}",
+    "Endpoint": "{Endpoint}"
   },
   "responses": {
     "200": {
-      "headers": {},
       "body": {
         "rewardWaitTime": "PT10M",
-        "defaultReward": 0.0,
+        "defaultReward": 0,
         "rewardAggregation": "earliest",
         "explorationPercentage": 0.2,
         "modelExportFrequency": "PT5M",
@@ -35,7 +33,8 @@
         "isAutoOptimizationEnabled": true,
         "autoOptimizationFrequency": "P7D",
         "autoOptimizationStartDate": "2019-01-19T00:00:00Z"
-      }
+      },
+      "headers": {}
     }
   }
 }
