--- a/specification/azure-kusto/resource-manager/Microsoft.Kusto/stable/2022-02-01/examples/KustoAttachedDatabaseConfigurationCheckNameAvailability.json
+++ b/specification/azure-kusto/resource-manager/Microsoft.Kusto/stable/2022-02-01/examples/KustoAttachedDatabaseConfigurationCheckNameAvailability.json
@@ -1,9 +1,9 @@
 {
   "parameters": {
     "subscriptionId": "12345678-1234-1234-1234-123456789098",
-    "api-version": "2021-08-27",
+    "api-version": "2022-02-01",
     "resourceGroupName": "kustorptest",
-    "clusterName": "kustoclusterrptest4",
+    "clusterName": "kustoCluster",
     "resourceName": {
       "name": "adc1",
       "type": "Microsoft.Kusto/clusters/attachedDatabaseConfigurations"
