--- a/specification/azure-kusto/resource-manager/Microsoft.Kusto/stable/2022-02-01/examples/KustoAttachedDatabaseConfigurationsDelete.json
+++ b/specification/azure-kusto/resource-manager/Microsoft.Kusto/stable/2022-02-01/examples/KustoAttachedDatabaseConfigurationsDelete.json
@@ -2,9 +2,9 @@
   "parameters": {
     "subscriptionId": "12345678-1234-1234-1234-123456789098",
     "resourceGroupName": "kustorptest",
-    "clusterName": "kustoclusterrptest4",
-    "attachedDatabaseConfigurationName": "attachedDatabaseConfigurations1",
-    "api-version": "2021-08-27"
+    "clusterName": "kustoCluster",
+    "attachedDatabaseConfigurationName": "attachedDatabaseConfigurationsTest",
+    "api-version": "2022-02-01"
   },
   "responses": {
     "200": {},
