Remove Dapr components from ContainerApp spec. Not breaking because the version hasn't been released yet. (#17479)
* Remove dapr components from the ContainerApp object

* Fix example

* add descriptions

* fix

* change the auto-rest parameters

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
@@ -38,7 +38,8 @@
           },
           "dapr": {
             "enabled": true,
-            "appPort": 3000
+            "appPort": 3000,
+            "appProtocol": "http"
           }
         }
       }
@@ -91,7 +92,8 @@
             },
             "dapr": {
               "enabled": true,
-              "appPort": 3000
+              "appPort": 3000,
+              "appProtocol": "http"
             }
           }
         }
@@ -143,7 +145,8 @@
             },
             "dapr": {
               "enabled": true,
-              "appPort": 3000
+              "appPort": 3000,
+              "appProtocol": "http"
             }
           }
         }
