--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Get.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Get.json
@@ -52,7 +52,8 @@
             },
             "dapr": {
               "enabled": true,
-              "appPort": 3000
+              "appPort": 3000,
+              "appProtocol": "http"
             }
           }
         }
