--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_ListByResourceGroup.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_ListByResourceGroup.json
@@ -53,7 +53,8 @@
                 },
                 "dapr": {
                   "enabled": true,
-                  "appPort": 3000
+                  "appPort": 3000,
+                  "appProtocol": "http"
                 }
               }
             }
