Add examples, fix prettier issues

--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/DeleteAzureDevOpsProject.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/DeleteAzureDevOpsProject.json
@@ -3,6 +3,8 @@
     "subscriptionId": "0806e1cd-cfda-4ff8-b99c-2b0af42cffd3",
     "resourceGroupName": "myRg",
     "securityConnectorName": "mySecurityConnectorName",
+    "orgName": "myAzDevOpsOrg",
+    "projectName": "myAzDevOpsProject",
     "api-version": "2023-09-01-preview"
   },
   "responses": {
