Fine tuning examples with onboardingState, adding available inventory examples

--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ListGitLabProjectOnboarded.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ListGitLabProjectOnboarded.json
@@ -4,6 +4,7 @@
     "resourceGroupName": "myRg",
     "securityConnectorName": "mySecurityConnectorName",
     "groupFQName": "myGitLabGroup$mySubGroup",
+    "inventoryScope": "Onboarded",
     "api-version": "2023-09-01-preview"
   },
   "responses": {
