--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ListAzureDevOpsProjectOnboarded.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ListAzureDevOpsProjectOnboarded.json
@@ -4,6 +4,7 @@
     "resourceGroupName": "myRg",
     "securityConnectorName": "mySecurityConnectorName",
     "orgName": "myAzDevOpsOrg",
+    "inventoryScope": "Onboarded",
     "api-version": "2023-09-01-preview"
   },
   "responses": {
