Update OperationIDs. Update common-types to v5. Update Examples.

--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/DevOpsConfigurationsUpdate.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/DevOpsConfigurationsUpdate.json
@@ -5,14 +5,12 @@
     "securityConnectorName": "mySecurityConnectorName",
     "devOpsConfiguration": {
       "properties": {
-        "authorization": null,
         "azureDevOpsOrganizationConfigs": {
           "myAzureDevOpsOrganization": {
             "autoDiscovery": "Disabled",
             "projectConfigs": {
               "myProject": {
-                "autoDiscovery": "Enabled",
-                "repositoryConfigs": null
+                "autoDiscovery": "Enabled"
               }
             }
           }
@@ -28,7 +26,6 @@
       "headers": {},
       "body": {
         "properties": {
-          "authorization": null,
           "azureDevOpsOrganizationConfigs": null,
           "gitLabGroupConfigs": null,
           "gitHubOwnerConfigs": null,
@@ -45,7 +42,6 @@
       },
       "body": {
         "properties": {
-          "authorization": null,
           "azureDevOpsOrganizationConfigs": null,
           "gitLabGroupConfigs": null,
           "gitHubOwnerConfigs": null,
