--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ConfigurationsCreateOrUpdateAzureDevOps.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ConfigurationsCreateOrUpdateAzureDevOps.json
@@ -24,7 +24,11 @@
       "headers": {},
       "body": {
         "properties": {
-          "azureDevOpsOrganizationConfigs": null,
+          "azureDevOpsOrganizationConfigs": {
+            "myAzureDevOpsOrganization": {
+              "autoDiscovery": "Enabled"
+            }
+          },
           "gitLabGroupConfigs": null,
           "gitHubOwnerConfigs": null,
           "provisioningState": "Succeeded"
