--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ConfigurationsCreateOrUpdateGitLab.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ConfigurationsCreateOrUpdateGitLab.json
@@ -25,7 +25,11 @@
       "body": {
         "properties": {
           "azureDevOpsOrganizationConfigs": null,
-          "gitLabGroupConfigs": null,
+          "gitLabGroupConfigs": {
+            "GitLabGroup1": {
+              "autoDiscovery": "Enabled"
+            }
+          },
           "gitHubOwnerConfigs": null,
           "provisioningState": "Succeeded"
         },
