--- a/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ConfigurationsUpdate.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2023-09-01-preview/examples/SecurityConnectorsDevOps/ConfigurationsUpdate.json
@@ -26,7 +26,16 @@
       "headers": {},
       "body": {
         "properties": {
-          "azureDevOpsOrganizationConfigs": null,
+          "azureDevOpsOrganizationConfigs": {
+            "myAzureDevOpsOrganization": {
+              "autoDiscovery": "Disabled",
+              "projectConfigs": {
+                "myProject": {
+                  "autoDiscovery": "Enabled"
+                }
+              }
+            }
+          },
           "gitLabGroupConfigs": null,
           "gitHubOwnerConfigs": null,
           "provisioningState": "Succeeded"
