resolve RPC-Uri-V1-05 'pattern' restriction

--- a/specification/security/resource-manager/Microsoft.Security/preview/2022-01-01-preview/governanceAssignments.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2022-01-01-preview/governanceAssignments.json
@@ -54,7 +54,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "#/parameters/AssessmentName"
+            "$ref": "../../../common/v2/types.json#/parameters/AssessmentNameParameter"
           }
         ],
         "responses": {
@@ -96,7 +96,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "#/parameters/AssessmentName"
+            "$ref": "../../../common/v2/types.json#/parameters/AssessmentNameParameter"
           },
           {
             "$ref": "#/parameters/AssignmentKey"
@@ -136,7 +136,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "#/parameters/AssessmentName"
+            "$ref": "../../../common/v2/types.json#/parameters/AssessmentNameParameter"
           },
           {
             "$ref": "#/parameters/AssignmentKey"
@@ -185,7 +185,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "#/parameters/AssessmentName"
+            "$ref": "../../../common/v2/types.json#/parameters/AssessmentNameParameter"
           },
           {
             "$ref": "#/parameters/AssignmentKey"
@@ -336,14 +336,6 @@
       "required": true,
       "type": "string",
       "description": "The governance assignment key - the assessment key of the required governance assignment",
-      "x-ms-parameter-location": "method"
-    },
-    "AssessmentName": {
-      "name": "assessmentName",
-      "in": "path",
-      "required": true,
-      "type": "string",
-      "description": "The Assessment Key - Unique key for the assessment type",
       "x-ms-parameter-location": "method"
     },
     "GovernanceAssignmentBody": {
