resolve 'DefaultErrorResponseSchema' - missing schema ref for 'governanceAssignments'

--- a/specification/security/resource-manager/Microsoft.Security/preview/2022-01-01-preview/governanceAssignments.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2022-01-01-preview/governanceAssignments.json
@@ -199,7 +199,10 @@
             "description": "No Content - Governance assignment does not exist"
           },
           "default": {
-            "description": "Error response describing why the operation failed"
+            "description": "Error response describing why the operation failed",
+            "schema": {
+              "$ref": "../../../common/v1/types.json#/definitions/CloudError"
+            }
           }
         }
       }
