try resolving incorrect INCONSISTENT_API_VERSION (using common-types in path)

--- a/specification/security/resource-manager/Microsoft.Security/preview/2022-01-01-preview/governanceAssignments.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2022-01-01-preview/governanceAssignments.json
@@ -54,7 +54,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "../../../common/v2/types.json#/parameters/AssessmentName"
+            "$ref": "../../../common-types/v2/types.json#/parameters/AssessmentName"
           }
         ],
         "responses": {
@@ -96,7 +96,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "../../../common/v2/types.json#/parameters/AssessmentName"
+            "$ref": "../../../common-types/v2/types.json#/parameters/AssessmentName"
           },
           {
             "$ref": "#/parameters/AssignmentKey"
@@ -136,7 +136,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "../../../common/v2/types.json#/parameters/AssessmentName"
+            "$ref": "../../../common-types/v2/types.json#/parameters/AssessmentName"
           },
           {
             "$ref": "#/parameters/AssignmentKey"
@@ -185,7 +185,7 @@
             "$ref": "../../../common/v1/types.json#/parameters/Scope"
           },
           {
-            "$ref": "../../../common/v2/types.json#/parameters/AssessmentName"
+            "$ref": "../../../common-types/v2/types.json#/parameters/AssessmentName"
           },
           {
             "$ref": "#/parameters/AssignmentKey"
