--- a/specification/containerservice/resource-manager/Microsoft.ContainerService/aks/preview/2023-07-02-preview/examples/ManagedClustersCreate_IngressProfile_WebAppRouting.json
+++ b/specification/containerservice/resource-manager/Microsoft.ContainerService/aks/preview/2023-07-02-preview/examples/ManagedClustersCreate_IngressProfile_WebAppRouting.json
@@ -50,7 +50,9 @@
         "ingressProfile": {
           "webAppRouting": {
             "enabled": true,
-            "dnsZoneResourceId": "/subscriptions/SUB_ID/resourceGroups/RG_NAME/providers/Microsoft.Network/dnszones/DNS_ZONE_NAME"
+            "dnsZoneResourceIds": [
+              "/subscriptions/SUB_ID/resourceGroups/RG_NAME/providers/Microsoft.Network/dnszones/DNS_ZONE_NAME"
+            ]
           }
         }
       }
@@ -143,7 +145,9 @@
           "ingressProfile": {
             "webAppRouting": {
               "enabled": true,
-              "dnsZoneResourceId": "/subscriptions/SUB_ID/resourceGroups/RG_NAME/providers/Microsoft.Network/dnszones/DNS_ZONE_NAME"
+              "dnsZoneResourceIds": [
+                "/subscriptions/SUB_ID/resourceGroups/RG_NAME/providers/Microsoft.Network/dnszones/DNS_ZONE_NAME"
+              ]
             }
           }
         }
@@ -233,7 +237,9 @@
           "ingressProfile": {
             "webAppRouting": {
               "enabled": true,
-              "dnsZoneResourceId": "/subscriptions/SUB_ID/resourceGroups/RG_NAME/providers/Microsoft.Network/dnszones/DNS_ZONE_NAME"
+              "dnsZoneResourceIds": [
+                "/subscriptions/SUB_ID/resourceGroups/RG_NAME/providers/Microsoft.Network/dnszones/DNS_ZONE_NAME"
+              ]
             }
           }
         }
