--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-11-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-11-01-preview/appplatform.json
@@ -7489,7 +7489,7 @@
           "readOnly": true
         },
         "serviceId": {
-          "description": "ServiceInstanceEntity Id which uniquely identifies a created resource",
+          "description": "ServiceInstanceEntity GUID which uniquely identifies a created resource",
           "type": "string",
           "readOnly": true
         },
@@ -8579,15 +8579,17 @@
             "modelAsString": true
           }
         },
-        "components": {
-          "description": "Collection of components belong to Dev Tool Portal.",
+        "resourceRequests": {
+          "$ref": "#/definitions/DevToolPortalResourceRequests",
+          "description": "The requested resource quantity for required CPU and Memory."
+        },
+        "instances": {
+          "description": "Collection of instances belong to Dev Tool Portal.",
           "uniqueItems": false,
           "type": "array",
-          "x-ms-identifiers": [
-            "name"
-          ],
+          "x-ms-identifiers": [],
           "items": {
-            "$ref": "#/definitions/DevToolPortalComponent"
+            "$ref": "#/definitions/DevToolPortalInstance"
           },
           "readOnly": true
         },
@@ -8608,29 +8610,6 @@
         "features": {
           "$ref": "#/definitions/DevToolPortalFeatureSettings",
           "description": "Settings for Dev Tool Portal"
-        }
-      }
-    },
-    "DevToolPortalComponent": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "readOnly": true
-        },
-        "resourceRequests": {
-          "$ref": "#/definitions/DevToolPortalResourceRequests",
-          "description": "The requested resource quantity for required CPU and Memory."
-        },
-        "instances": {
-          "description": "Collection of instances belong to Dev Tool Portal.",
-          "uniqueItems": false,
-          "type": "array",
-          "x-ms-identifiers": [],
-          "items": {
-            "$ref": "#/definitions/DevToolPortalInstance"
-          },
-          "readOnly": true
         }
       }
     },
