fix swagger model validation errors from run https://github.com/Azure/azure-rest-api-specs-pr/pull/14245/checks?check_run_id=15795564788

--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2023-09-01/examples/PutVirtualMachineInstanceWithVMConfigAgent.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/stable/2023-09-01/examples/PutVirtualMachineInstanceWithVMConfigAgent.json
@@ -1,6 +1,6 @@
 {
   "parameters": {
-    "api-version": "2023-07-01-preview",
+    "api-version": "2023-09-01",
     "resourceUri": "subscriptions/fd3c3665-1729-4b7b-9a38-238e83b0f98b/resourceGroups/testrg/Microsoft.HybridCompute/machines/DemoVM",
     "virtualMachineInstance": {
       "extendedLocation": {
@@ -79,7 +79,7 @@
           "provisioningState": "Accepted",
           "instanceView": {
             "vmAgent": {
-              "vmVMConfigAgentVersion": "1.0.0",
+              "vmConfigAgentVersion": "1.0.0",
               "statuses": [
                 {
                   "code": "Ok",
@@ -125,7 +125,7 @@
           "provisioningState": "Succeeded",
           "instanceView": {
             "vmAgent": {
-              "vmVMConfigAgentVersion": "1.0.0",
+              "vmConfigAgentVersion": "1.0.0",
               "statuses": [
                 {
                   "code": "Ok",
