--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/examples/TestConfigurationsRunTest.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/examples/TestConfigurationsRunTest.json
@@ -3,17 +3,16 @@
     "subscriptionId": "476f61a4-952c-422a-b4db-568a828f35df",
     "resourceGroupName": "contoso-rg1",
     "testBaseAccountName": "contoso-testBaseAccount1",
-    "testConfigurationId": "12345678-1234-5678-1234-567812348765",
+    "testConfigurationName": "test-configuration-name",
     "api-version": "2023-08-15-preview",
     "parameters": {
-      "organizationId": "C2764D9C-74C2-408E-BA25-AA1A7F213131",
       "osName": "Windows 10 21H1",
       "releaseName": "01273.9843",
       "osUpdateType": "SecurityUpdate",
       "testType": "Functional",
       "flightingRing": "Windows insiderChannel",
       "buildVersion": "12345",
-      "customImageResourceId": "C2764D9C-74C2-408E-BA25-AA1A7F213176",
+      "customImageId": "C2764D9C-74C2-408E-BA25-AA1A7F213176",
       "doNotInstallOSUpdates": false,
       "testRunTitle": "My Test Run"
     }
@@ -21,9 +20,8 @@
   "responses": {
     "200": {
       "body": {
-        "runId": "F7A13478-00FF-4BFA-8713-320A3C2409CC",
+        "testPassId": "F7A13478-00FF-4BFA-8713-320A3C2409CC",
         "status": "Queued",
-        "message": "On-demand run has been queued successfully.",
         "totalPackagesScheduled": 20
       }
     }
