Fixed sematic issues

--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
@@ -430,7 +430,7 @@
             "$ref": "../../../../../common-types/resource-management/v3/types.json#/parameters/ResourceGroupNameParameter"
           },
           {
-            "$ref": "#/parameters/TestBaseAccountNameParameter"
+            "$ref": "./testbase.json#/parameters/TestBaseAccountNameParameter"
           },
           {
             "$ref": "#/parameters/TestConfigurationName"
@@ -854,10 +854,14 @@
         }
       },
       "required": [
-        "testType", "osUpdateType", "osName"
+        "testType",
+        "osUpdateType",
+        "osName"
       ],
       "allOf": [
-        { "$ref": "./testbase.json#/definitions/TestRunParameters" }
+        {
+          "$ref": "./testbase.json#/definitions/TestRunParameters"
+        }
       ]
     },
     "TestConfigurationRunTestResponse": {
