Fixed semantic issues

--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
@@ -414,7 +414,7 @@
         }
       }
     },
-    "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.TestBase/testBaseAccounts/{testBaseAccountName}/testConfigurations/{testConfigurationId}/runTest": {
+    "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.TestBase/testBaseAccounts/{testBaseAccountName}/testConfigurations/{testConfigurationName}/runTest": {
       "post": {
         "tags": [
           "Test Configuration"
