Configure git username and email - Required on Windows

--- a/eng/pipelines/typespec-validation-all.yml
+++ b/eng/pipelines/typespec-validation-all.yml
@@ -23,7 +23,7 @@ jobs:
     vmImage: $(OSVmImage)
 
   steps:
-  - script: git merge origin/main
+  - script: git -c user.name="azure-sdk" -c user.email="azuresdk@microsoft.com" merge origin/main
     displayName: git merge origin/main
 
   # Remove lockfile to update all packages to latest "next" version
