--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-07-01-preview/appplatform.json
@@ -12415,7 +12415,7 @@
           "description": "Credential of the image registry"
         },
         "languageFramework": {
-          "description": "Language framework of the container image uploaded",
+          "description": "Language framework of the container image uploaded. Supported values: \"springboot\", \"\", null.",
           "type": "string"
         }
       }
