--- a/specification/purestorage/PureStorage.Block.Management/tspconfig.yaml
+++ b/specification/purestorage/PureStorage.Block.Management/tspconfig.yaml
@@ -2,8 +2,7 @@ output-dir: "{project-root}/"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
-  "@azure-tools/typespec-autorest":
-    emitter-output-dir: "{output-dir}"
-    output-file: purestorage.json
-    azure-resource-provider-folder: ./resource-manager
-    examples-directory: "./examples"
+  '@azure-tools/typespec-autorest':
+    emitter-output-dir: "{project-root}/.."
+    azure-resource-provider-folder: "resource-manager"
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/purestorage.json"
