Changed status to an enum and include MediaPackageVersion

--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
@@ -874,7 +874,16 @@
         },
         "status": {
           "type": "string",
-          "description": "The status of the on-demand run."
+          "description": "The status of the on-demand run.",
+          "default": "Queued",
+          "enum": [
+            "Queued",
+            "Rejected"
+          ],
+          "x-ms-enum": {
+            "name": "status",
+            "modelAsString": true
+          }
         },
         "totalPackagesScheduled": {
           "type": "integer",
