--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/examples/TestConfigurationsRunTest.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/examples/TestConfigurationsRunTest.json
@@ -14,7 +14,8 @@
       "buildVersion": "12345",
       "customImageId": "C2764D9C-74C2-408E-BA25-AA1A7F213176",
       "doNotInstallOSUpdates": false,
-      "testRunTitle": "My Test Run"
+      "testRunTitle": "My Test Run",
+      "mediaPackageVersion": "35332"
     }
   },
   "responses": {
