--- a/specification/azuredatatransfer/resource-manager/Microsoft.AzureDataTransfer/stable/2023-06-28/examples/approveOrRejectConnection.json
+++ b/specification/azuredatatransfer/resource-manager/Microsoft.AzureDataTransfer/stable/2023-06-28/examples/approveOrRejectConnection.json
@@ -2,7 +2,7 @@
   "parameters": {
     "pipelineName": "testPipeline",
     "resourceGroupName": "testRG",
-    "api-version": "2022-12-13-preview",
+    "api-version": "2023-06-28",
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "connection": {
       "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testRG/providers/Microsoft.AzureDataTransfer/connections/testConnection",
@@ -12,7 +12,7 @@
   "responses": {
     "202": {
       "headers": {
-        "location": "http://management.azure.com/subscriptions/12345/providers/Microsoft.AzureDataTransfer/locations/eastUS?api-version=2022-12-13-preview"
+        "location": "http://management.azure.com/subscriptions/12345/providers/Microsoft.AzureDataTransfer/locations/eastUS?api-version=2023-06-28"
       },
       "body": {
         "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testRG/providers/Microsoft.AzureDataTransfer/connections/testConnection",
