Add a new object (#14122)

--- a/specification/appcomplianceautomation/resource-manager/Microsoft.AppComplianceAutomation/preview/2023-02-15-preview/appcomplianceautomation.json
+++ b/specification/appcomplianceautomation/resource-manager/Microsoft.AppComplianceAutomation/preview/2023-02-15-preview/appcomplianceautomation.json
@@ -2592,6 +2592,14 @@
           "readOnly": true,
           "$ref": "../../../../../common-types/resource-management/v3/types.json#/definitions/systemData"
         },
+        "complianceData": {
+          "type": "object",
+          "readOnly": true,
+          "description": "The compliance data.",
+          "additionalProperties": {
+            "type": "string"
+          }
+        },
         "complianceResults": {
           "readOnly": true,
           "type": "array",
